--- a/src/components/StopWatch.css
+++ b/src/components/StopWatch.css
@@ -1,24 +1,24 @@
-body{
+/* /* body{
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: hsl(0, 0%, 95%)
-}
+} */
 
 .stopwatch{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 5px solid;
+    /* border: 5px solid; */
     border-radius: 50px;
-    background-color: white;
-    padding: 30px;
+    background-color: #3b4f3c;
+    padding: 70px;
 }
 .display{
     font-size: 5rem;
     font-family: monospace;
     font-weight: bold;
-    color: hsl(0, 0%, 30%);
+    color: hsl(0, 15%, 95%);
     text-shadow: 2px 2px hsl(0, 0%, 0%, 0.75);
     margin-bottom: 25px;
 }
@@ -54,4 +54,4 @@ body{
 }
 .reset-button:hover{
     background-color: hsl(205, 90%, 50%);
-}
+} 
