--- a/src/components/StopWatch.css
+++ b/src/components/StopWatch.css
@@ -36,24 +36,27 @@
 }
 
 .start-button{
-    background-color: hsl(120, 70%, 40%);
+    background-color: hsl(120, 70%, 35%);
 }
 .start-button:hover{
-    background-color: hsl(120, 70%, 35%);
+    background-color: hsl(120, 70%, 45%);
+    transform: scale(1.08);
 }
 
 .stop-button{
-    background-color: hsl(10, 90%, 50%);
+    background-color: hsl(10, 90%, 40%);
 }
 .stop-button:hover{
-    background-color: hsl(10, 90%, 45%);
+    background-color: hsl(10, 90%, 50%);
+    transform: scale(1.08);
 }
 
 .reset-button{
-    background-color: hsl(205, 90%, 60%);
+    background-color: hsl(205, 90%, 45%);
 }
 .reset-button:hover{
-    background-color: hsl(205, 90%, 50%);
+    background-color: hsl(205, 90%, 60%);
+    transform: scale(1.08);
 }
 
 @media screen and (max-width: 768px) {
