--- a/src/NotionL/WeatherComponent.css
+++ b/src/NotionL/WeatherComponent.css
@@ -1,11 +1,11 @@
 .weather {
     position: absolute;
-    top: 1rem;
-    right: 5rem;
+    top: 5.5rem;
+    left: 1rem;
     display: flex;
     align-items: center;
     gap: 0.75rem;
-    padding: 0.75rem 1rem;
+    padding: 0.6rem 1rem;
     background-color: var(--bg-column);
     border-radius: var(--border-radius-md);
     box-shadow: 0 .25rem .5rem var(--shadow-color);
@@ -34,7 +34,7 @@
 @media screen and (max-width: 768px) {
     .weather {
         position: static;
-        margin: 1rem auto;
+        margin: 0.5rem auto;
         width: fit-content;
     }
 }
