--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 /* .card{
   border: 1px solid hs1(0,0%,80%);
   border-radius: 10px;
@@ -104,9 +105,9 @@
 }
 .counter-button:hover{
   background-color: hsl(120, 100%, 30%);
-} */
+}  */
 
-/* body{
+/* /* body{
   font-family: Arial, Helvetica, sans-serif;
 }
 .class-picker-container{
@@ -151,7 +152,7 @@ input[type="color"]{
 } */
 
 
-/* body{
+body{
   background-image: url(assets/background.webp);
   background-position: center;
   background-repeat: no-repeat;
@@ -178,9 +179,9 @@ input[type="color"]{
   text-align: center;
   text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.75);
 
-} */
+} 
 
-/* .box{
+.box{
   border: 3px solid;
   padding: 25px;
 }  */
@@ -189,7 +190,7 @@ input[type="color"]{
 
 
 
-/* .draggable-item {
+.draggable-item {
   cursor: move;
   padding: 10px;
   margin: 5px;
@@ -211,4 +212,4 @@ input[type="color"]{
 .drop-zone.drag-over {
   background-color: rgba(0, 0, 0, 0.05);
   border-color: #999;
-} */
+}
